# lumberjack-protocol

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
bench_harness/go-baseline/: .gitignore  go.mod  go.sum  main.go
bench_harness/interop/: go.mod  main.go
benches/: frame.rs
docs/benchmarks/: baseline.md
docs/superpowers/plans/: 2026-04-09-lumberjack-rs.md  2026-04-12-client-bandwidth-throttle.md
docs/superpowers/specs/: 2026-04-09-lumberjack-rs-design.md  2026-04-12-client-bandwidth-throttle-design.md
examples/: baseline.rs  client.rs  server.rs
src/: .client.rs.swp  .server.rs.swp  .tls.rs.swp  client.rs  codec.rs  error.rs  frame.rs  lib.rs  server.rs  tls.rs
tests/: compression.rs  interop.rs  roundtrip.rs  tls.rs
