[package]
name = "lumberjack"
version = "0.1.0"
edition = "2021"
description = "Async Rust implementation of the Lumberjack v2 protocol (Elastic Beats / Logstash)."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["net", "rt", "io-util", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
flate2 = { version = "1", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
rand = "0.8"

[features]
default = ["tls", "compression"]
tls = ["dep:tokio-rustls", "dep:rustls-pemfile", "dep:rustls-native-certs"]
compression = ["dep:flate2"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
rcgen = "0.13"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "frame"
harness = false

[[example]]
name = "baseline"
path = "examples/baseline.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
